Salesforce Assignment/Salesforce_Assignment_7/src/objects/PurchaseOrder__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order_Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Payment__c</fullName>
        <label>Total_Payment</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>PurchaseOrder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PurchaseOrder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PurchaseOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>